[package]
name = "euler"
version = "0.1.0"
authors = ["Matthew Haney <thewpaney>"]
edition = "2018"
description = "A crate containing all of the Rust-based solutions to Project Euler problems"
readme = "../README.md"
license = "MIT"
publish = false

[lib]
name = "common"

[dependencies]
bincode = "1.3"
serde = "1.0"
serde_derive = "1.0"